﻿*******************************************************************

   Проект : WebPrinter OPOS драйвер

*******************************************************************

  OposShtrih_1.13.60.exe
  13 декабря 2024 18:38
  
  [-] Поля card_type и ppt_id не будут сохраняться при оплате наличными
  
*******************************************************************

  OposShtrih_1.13.59.exe
  29 октября 2024 14:38
  
  [-] Исключена коррекция времени сервера
	  
*******************************************************************

  OposShtrih_1.13.58.exe
  21 октября 2024 14:52
  
  [+] Добавлена обработка ошибки 2, "Read timed out" при закрытии смены 
      При этой ошибке непонятно, закрыта смена на сервере или нет
  
*******************************************************************

  OposShtrih_1.13.57.exe
  30 сентября 2024 12:45
  
  [+] Добавлена проверка кода маркировки
  
*******************************************************************

  OposShtrih_1.13.56.exe
  25 сентября 2024 18:40
  
  [+] Добавлена проверка, зарегистрирован ли чек на сервере
      Это нужно в тех случаях, когда сервер возвращает ошибку, 
	  но на самом деле чек зарегистрирован
	  
*******************************************************************

  OposShtrih_1.13.55.exe
  20 сентября 2024 14:20
  
  [+] Измненена передача кодов маркировки в соответствии с 
	  методическими рекомендациями для ЦОТУ версии 2.5 от
	  19.01.2023
  
*******************************************************************

  OposShtrih_1.13.54.exe
  9 сентября 2024 13:00
  
  [+] Добавлено управление суммами внесения и выплаты в утилиту настройки
  
*******************************************************************

  OposShtrih_1.13.53.exe
  26 августа 2024 16:00
  
  [-] Исправлена ошибка запуска утилиты настройки
  
*******************************************************************

  OposShtrih_1.13.52.exe
  21 августа 2024 19:10
  
  [-] Исправлен запрос и печать наличных в ККМ
	  