@@ -4,6 +4,13 @@
 
 *******************************************************************
 
+  OposShtrih_1.13.61.exe
+  14 января 2024 14:28
+  
+  [+] Добавлена страница SetPosID для вызова метода SetPosID
+  
+*******************************************************************
+
   OposShtrih_1.13.60.exe
   13 декабря 2024 18:38
   
